--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "sst bind astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "sst:deploy": "sst deploy",
+    "sst:dev": "sst dev"
   },
   "dependencies": {
     "astro": "^2.9.6"
+  },
+  "devDependencies": {
+    "astro-sst": "^2.22.6",
+    "aws-cdk-lib": "2.84.0",
+    "constructs": "10.1.156",
+    "sst": "^2.22.6",
+    "prettier": "^3.0.0"
+  },
+  "prettier": {
+    "semi": false
   }
 }
